--- a/src/styles/Weightlog.module.css
+++ b/src/styles/Weightlog.module.css
@@ -23,39 +23,35 @@ input[type="number"] {
     align-items: center;
     gap: 7px; 
     margin-left: 10px; 
-    margin-top: -10px; 
+    margin-bottom: 0; 
 }
 
 .weight .weight-input {
+    display: flex;
+    align-items: center;
     width: 150px;
     height: 30px;
     font-size: 16px; 
 }
 
-.weight .unit {
-    color: gray; 
-    position: absolute;
-    top: 10px; 
-    left: 230px;
-    font-size: 28px; 
-}
 
 .weight .save-button {
-    padding: 8px 24px; 
-    margin: 13px 0; 
-    font-size: 18px; 
-    font-weight: 100; 
-    text-transform: uppercase; 
-    border:none; 
-    background: rgba(0, 198, 145, 1); 
-    color: white; 
-    cursor: pointer; 
-    margin-bottom: 14px; 
-    border-radius: 10px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #343d46;
+    border-radius: 30px;
+    cursor: pointer;
+    border: none;
+    color: white;
+    padding: 15px;
+    font-weight: 900;
+    height: 40px;
+    margin-top: 7px;
 }
 
 .weight .save-button:hover {
-    background: rgb(3, 152, 112);
+    background: #4f5b66;
 }
 
 .weight-entry-table h1{
@@ -106,11 +102,6 @@ input[type="number"] {
 }
 
 
-.dateContaine {
-    margin-right: 0.4%; 
-
-}
-
 .weightChartContainer {
     margin-left: 0.7%; 
 }
@@ -121,6 +112,7 @@ input[type="number"] {
 .weightLogContainer {
     display: flex; 
     padding: 1.5vh; 
+
     justify-content: space-between;
 }
 
