--- a/src/styles/dateSelector.css
+++ b/src/styles/dateSelector.css
@@ -1,11 +1,11 @@
 /*Changing the highlight color of the selected date*/
 .react-datepicker__day--selected {
-    background-color: #00c691;
+    background-color: #343d46 ;
     color: white;
 }
 
 .react-datepicker__day--selected:hover {
-    background-color: #00a67e ; /* Custom hover color */
+    background-color: #4f5b66 ; /* Custom hover color */
 }
 
 
